macros8/macros/condor.err
PATH: Undefined variable.
input_line_187:2:25: error: use of undeclared identifier 'nEvents'
 Fun4All_G4_EICDetector(nEvents) /* '.x' tries to invoke a function with the same name as the macro */
                        ^
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
Error in <TFile::TFile>: file G4EICDetector.root does not exist
